TWINS-385: add new update endpoint, rework old one